Copyright Update.  Added documentation to all classes and methods (thanks Junie).  JVM version updated to 21 with use of the latest OSS framework.  Added automated version check.