@@ -1,5 +1,5 @@
 /*
- * Copyright 2011-2024 Lime Mojito Pty Ltd
+ * Copyright 2011-2025 Lime Mojito Pty Ltd
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -28,12 +28,22 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.stream.Collectors;
 
+/**
+ * Resource cleaner for AWS CloudWatch Log Groups.
+ * This cleaner identifies and deletes log groups that have no stored data (0 bytes).
+ */
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class LogGroupCleaner extends PhysicalResourceCleaner {
     private final AWSLogs client;
 
+    /**
+     * {@inheritDoc}
+     * Retrieves a list of all CloudWatch Log Group names.
+     *
+     * @return A list of Log Group names
+     */
     @Override
     protected List<String> getPhysicalResourceIds() {
         return client.describeLogGroups()
@@ -43,11 +53,18 @@ public class LogGroupCleaner extends PhysicalResourceCleaner {
                 .collect(Collectors.toList());
     }
 
+    /**
+     * {@inheritDoc}
+     * Deletes a CloudWatch Log Group only if it has no stored data (0 bytes).
+     * Log groups with data are preserved.
+     *
+     * @param physicalId The name of the Log Group to delete
+     */
     protected void performDelete(String physicalId) {
         log.debug("Checking group {}", physicalId);
         if (client.describeLogGroups(new DescribeLogGroupsRequest().withLogGroupNamePrefix(physicalId))
                 .getLogGroups()
-                .get(0)
+                .getFirst()
                 .getStoredBytes() == 0) {
             log.info("Removing group {}", physicalId);
             client.deleteLogGroup(new DeleteLogGroupRequest(physicalId));
